# cuti

./: .cloudflare-pages.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GOAL.md  README.md  TASK_TRACKER_UI_IMPROVEMENTS.md  docker-compose-wrapper.sh  justfile  pyproject.toml  rebuild.sh  run.py  tab-preview.html  task-tracker-test.html  terminal_template.html  test_agent_integration.py  test_agents.py  test_autocomplete.html  test_in_browser.md  test_interface.py  test_new_ui.sh  test_ui_fixes.py
.claude/agents/: ui-design-expert.md
.codex/: config.toml
.codex/agents/: code-reviewer.toml  docs-generator.toml  refactor-assistant.toml  test-writer.toml  ui-design-expert.toml
.github/workflows/: ci.yml  release.yml
docker/seccomp/: cuti-container-seccomp.json
docs/: automatic-tools-activation.md  claude-account-quick-start.md  claude-account-switching.md  claude-api-keys.md  claude-container-auth.md  claude-history.md  clawdbot-workspace-layout.md  clawdbot.md  cli-tools-management.md  container.md  devcontainer.md  kuyuchi-container-audit.md  kuyuchi-threat-model.md  rate-limit-handling.md  todo-system.md  workspace-tools-architecture.md
scripts/: claude-switch.sh  setup-claude-host.sh
src/: __init__.py
src/ccutils/: __init__.py  __main__.py  aliases.py  cli.py  history.py  models.py  queue_manager.py  task_expansion.py
src/ccutils/web/: __init__.py  main.py  monitoring.py
src/cuti/: __init__.py  __main__.py  claude_usage_monitor.py  cli.py  models.py  queue_manager.py
src/cuti/agents/: __init__.py  base.py  claude_agent.py  context.py  gemini_agent.py  pool.py  router.py
src/cuti/cli/: __init__.py  app.py  utils.py
src/cuti/core/: __init__.py  claude_interface.py  claude_sdk_interface.py  claude_stream_interface.py  config.py  mock_stream_interface.py  models.py  prompt_prefix.py  queue.py  storage.py  todo_models.py  token_counter.py
src/cuti/services/: __init__.py  addons.py  agent_manager.py  aliases.py  claude_account_manager.py  claude_agent_manager.py  claude_history.py  claude_logs_reader.py  claude_monitor_integration.py  claude_orchestration.py  claude_settings_manager.py  claude_todo_sync.py  claude_usage_monitor.py  clawdbot_instance.py  container_state.py  container_usage_sync.py  devcontainer.py  global_data_manager.py  goal_parser.py  history.py  instructions.py  log_sync.py  monitoring.py  provider_host.py  providers.py  queue_service.py  task_expansion.py  task_history.py  todo_service.py  tool_catalog.py  usage_sync_service.py  workspace_manager.py  workspace_tools.py
src/cuti/shell/: auto_activate.sh
tests/: conftest.py  test_agent_integration.py  test_agents.py  test_chat_sync.py  test_claude_container_version_persistence.py  test_claude_update_command.py  test_clawdbot_up_config_detection.py  test_docker_compose_fix.py  test_instructions.py  test_interface.py  test_openclaw_command.py  test_production_cleanup.py  test_provider_host.py  test_providers.py  test_queue.py  test_queue_production_readiness.py  test_runtime_security_profiles.py  test_statistics_page.py  test_structure.py  test_todo_functionality.py  test_todo_hierarchy.py  test_todo_ui.py  test_usage_sync_noise.py  test_web_dashboard.py  test_web_ops.py
website/: README.md  build.sh  docs.html  docs.js  index.html  robots.txt  script.js  serve.py  sitemap.xml  styles.css
(+54 files in other folders)
