[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[project]
authors = [{ name = "claude-code" }, { name = "nociza" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "claude-monitor>=3.1.0",
    "fastapi>=0.104.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "uvicorn[standard]>=0.24.0",
]
description = "An instant, containerized Claude Code dev environment with provider, account, history, and usage tooling."
keywords = ["ai", "claude", "claude-code", "cli", "container", "devcontainer", "docker"]
license = "Apache-2.0"
name = "cuti"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.73"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "httpx>=0.25.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "pytest-asyncio>=0.21.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

container = ["docker>=6.0.0"]

[project.scripts]
cuti         = "cuti.cli.app:app"
cuti-web     = "cuti.web.app:main"
qt-openclaw  = "cuti.cli.commands.openclaw:app"

[project.urls]
Documentation = "https://github.com/nociza/cuti/blob/main/README.md"
Homepage      = "https://github.com/nociza/cuti"
Issues        = "https://github.com/nociza/cuti/issues"
Repository    = "https://github.com/nociza/cuti"

[tool.hatch.build.targets.wheel]
packages = ["src/cuti"]

[tool.hatch.build.targets.sdist]
include = ["/LICENSE", "/README.md", "/CHANGELOG.md", "/docs", "/scripts", "/src"]
exclude = ["/website"]

[tool.black]
line-length               = 88
skip-string-normalization = true
target-version            = ["py310"]

[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "C4", # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]

ignore = [
    "E501", # line too long (handled by black)
    "E402", # module-level import not at top of file (used intentionally for lazy/optional imports)
    "E722", # bare except (legacy; being narrowed incrementally)
    "UP038", # isinstance tuple form (cosmetic)
    "W291", # trailing whitespace inside multi-line SQL/shell string literals (black covers code lines)
    "W293", # whitespace on blank line inside multi-line string literals
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
check_untyped_defs       = true
disallow_any_generics    = true
disallow_incomplete_defs = true
disallow_untyped_defs    = true
no_implicit_optional     = true
python_version           = "3.10"
warn_redundant_casts     = true
warn_unused_ignores      = true

[tool.pytest.ini_options]
addopts          = "-v --tb=short"
asyncio_mode     = "auto"
python_classes   = ["Test*"]
python_files     = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
testpaths        = ["tests"]
